sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(estRange = 1)
               ^